--- a/Lab7/hw.html
+++ b/Lab7/hw.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Giphy Animals</title>
+  <title>Giphy Artists</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -14,7 +14,7 @@
   </div>
 
   <form id="animal-form">
-    <label for="animal-input">Add an animal or anything else you want</label>
+    <label for="animal-input">Add an artist or anything else you want</label>
     <input type="text" id="artist-input"><br>
     <input id="add" type="submit" value="Submit">
   </form>
